# paopaotang-game

./: README.md  build-openwrt.sh  build.sh
client/: Cargo.toml
client/src/: game.rs  input.rs  lib.rs  network.rs  renderer.rs  sprites.rs
client/www/: index.html  style.css
server/: Cargo.toml
server/src/: game.rs  main.rs  room.rs
shared/src/: constants.rs  lib.rs  map.rs  protocol.rs
