[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "Location",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "EventTarget",
    "AddEventListenerOptions",
    "Performance",
    "console",
    "Blob",
    "HtmlImageElement",
    "Url",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
